mk/projects/k8s_drupal_app/build/app/TEMPLATE/component-drupal.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-deployment
spec:
  template:
    spec:
      containers:
        - name: drupal-container
          image: ${DRUPAL_CONTAINER_REGISTRY_URL}/drupal:${DRUPAL_CONTAINER_IMAGE_TAG}
