mk/projects/k8s_drupal_app/build/app/TEMPLATE/ingress-service.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  tls:
    - hosts:
      - ${DRUPAL_APP_ENVIRONMENT_LC}.${CLIENT_URL}.${HOSTING_DOMAIN}
      secretName: ${DRUPAL_APP_ENVIRONMENT_LC}-app-env-tls-prod-letsencrypt-server
